# synctoolbox

./: .gitignore  LICENCE  README.md  apt.txt  environment.yml  ismir2021lbd_using_the_synctoolbox_for_an_experiment.ipynb  pyproject.toml  setup.py  sync_audio_audio_full.ipynb  sync_audio_audio_simple.ipynb  sync_audio_score_full.ipynb
.github/workflows/: python-package-conda-py37.yml  python-package-conda-py38.yml  python-package-conda-py39.yml  python-package.yml  test_conda.yml  test_pip.yml
data_csv/: Chopin_Op010-03-Measures1-8_MIDI.csv  Schubert_D911-01_HU33.csv  Schubert_D911-01_SC06.csv  Schubert_D911-03_HU33.csv  Schubert_D911-03_SC06.csv
data_music/: Chopin_Op010-03-Measures1-8_MIDI.mid
docs/: environment.yml
docs/source/: conf.py  dtw.rst  index.rst
docs/source/feature/: chroma.rst  dlnco.rst  filterbank.rst  index.rst  novelty.rst  pitch.rst  pitch_onset.rst  utils.rst
paper/: codemeta.json  paper.md  references.bib
synctoolbox/dtw/: anchor.py  core.py  cost.py  mrmsdtw.py  utils.py  visualization.py
synctoolbox/feature/: chroma.py  csv_tools.py  dlnco.py  filterbank.py  novelty.py  pitch.py  pitch_onset.py  utils.py
tests/: test_dtw.py  test_features.py  utils.py
tests/data/: f_CENS_1.npy  f_CENS_2.npy  f_DLNCO_1.npy  f_DLNCO_2.npy  f_chroma_1.npy  f_chroma_2.npy  f_chroma_quantized_1.npy  f_chroma_quantized_2.npy  f_filtfilt.npy  f_onset.npy  f_pitch_ann.npy  f_pitch_onset_1.pickle  f_pitch_onset_2.pickle  f_pitch_onset_ann.pickle  fb.pickle  peaks.npy  thresh.npy  wp.npy  wp_high_res.npy  wp_simple.npy
